# MacVoxCPM

./: .gitignore  LICENSE  Package.swift  README.md
Sources/MacVoxCPM/App/: MacVoxCPMApp.swift
Sources/MacVoxCPM/Models/: Models.swift
Sources/MacVoxCPM/Services/: AudioPlayer.swift  AudioStore.swift  Paths.swift  SidecarManager.swift
Sources/MacVoxCPM/Views/: AdvancedSettingsView.swift  AppSettingsView.swift  GeneratorView.swift  HistoryView.swift  OnboardingView.swift  VoiceLibraryView.swift  WaveformView.swift
assets/: AppIcon.icns
scripts/: build-app.sh  build-dmg.sh  fetch-uv.sh
sidecar/: pyproject.toml  server.py
